vchain-task-deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
    type: NodePort
    selector:
        app: task-service
    ports:
        - port: 8086
          targetPort: 8086
          protocol: TCP
