vchain-task-deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path
  name: task-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/tasks
        backend:
          serviceName: task-service
          servicePort: 8086
